[package]
name = "heuristics"
version = "0.1.0"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Rules of thumb to improve Rust code."
documentation = "https://docs.rs/heuristics"
homepage = "https://github.com/cryptopatrick/heuristics"
repository = "https://github.com/cryptopatrick/heuristics"
readme = "README.md"
keywords = ["heuristics", "rust", "data-structures", "algorithms", "performance"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "heuristics"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[[bin]]
name = "heuristics"
path = "src/main.rs"
